FIXED SPACING FOR IMAGE GRID ON WORK PAGES

--- a/styles/partials/_ads.scss
+++ b/styles/partials/_ads.scss
@@ -49,10 +49,14 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   padding: 2% 2%;
+  a {
+    margin-bottom: 5%;
+  }
   img {
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
+    border-radius: 5px;
   }
 }
 
